Enhancement: Introduce confirmation of delivering Recommendations to HSBC (ALL-56)
Closes ALLIN-56

Merged from: https://gitlab.silenteight.com/hsbc-bank/hsbc-bridge/-/merge_requests/54
